Add fix for broken flyway